--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Mobile Oil Change | Fast, Affordable Service at Your Door</title>
+  <title>PitStop Mobile | Fast, Affordable oil change Service at Your Door</title>
   <meta name="description" content="Hassle-free mobile oil changes starting at $49. We come to your home or workplace. Book online or via text — quick, convenient, and professional.">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet"/>
   <style>
@@ -153,7 +153,7 @@
   <div class="section testimonial">
     <h2>⭐ What Our Customers Say</h2>
     <p>"This service saved me so much time. I booked online and my oil change was done in my driveway while I worked from home. Super convenient and professional!"</p>
-    <cite>– Alex R., San Diego</cite>
+    <cite>– Alex R., Lowell</cite>
   </div>
 
   <div class="section booking">
@@ -163,7 +163,7 @@
   </div>
 
   <footer>
-    &copy; 2025 Mobile Oil Change Service. All rights reserved. | Call/Text: (123) 456-7890
+    &copy; 2025 PitStop Mobile. All rights reserved. | Call/Text: (978) 408-9299
   </footer>
 
 </body>
