--- a/index.html
+++ b/index.html
@@ -156,11 +156,11 @@
     <cite>– Alex R., Lowell</cite>
   </div>
 
-  <div class="section booking">
-    <h2>📅 Book Your Service</h2>
-    <p>Ready to save time and skip the shop? Click below to schedule your oil change today:</p>
-    <a href="#booking" class="button">Book Now</a>
-  </div>
+ <div class="section booking" id="booking">
+  <h2>📅 Book Your Service</h2>
+  <p>Ready to save time and skip the shop? Click below to email us and schedule your oil change:</p>
+  <a href="mailto:bookings@youroilchange.com?subject=Mobile Oil Change Booking&body=Hi, I’d like to book a service. Please contact me at your earliest convenience." class="button">Book Now</a>
+</div>
 
   <footer>
     &copy; 2025 PitStop Mobile. All rights reserved. | Call/Text: (978) 408-9299
